feat: fold bundle packing into a unified sort pipeline
Bundle packing now happens as part of a normal sort, triggered by the
player's configured click method, instead of a separate command and
Ctrl+Q shortcut. A sort pools the eligible items in the region (including
bundle contents when packing is enabled), merges, packs partial stacks
into the region's bundles, then sorts the leftover stacks and bundles
back into place — a single pool/merge/layout pass.

- SortEngine: add sortAndMerge(Collection, SortingMethod) overload
- BundlePacker: extract packIntoBundles() returning leftover loose stacks;
  drop the in-place inventory-layout tail (sort now lays out)
- ClickMethod: add DROP (Ctrl+Q / CONTROL_DROP); shouldCancelEvent covers
  SWAP+DROP; new needsOffhandReset (SWAP only)
- InventorySortService: unified packAndSort; remove packOnly/packBundles
- PlayerSortingPrefs/MainConfig/config.yml: replace bundle_cap with
  bundle_inventory, bundle_others, bundle_stack_limit (default off/off/12)
- Commands: repurpose /clicksorted bundle into inventory|others|stacklimit
  toggles; remove bundlecap (command, lang, permission)
- Bins are region-scoped (hotbar bundles no longer absorb main-storage
  items); packing during a sort is silent
- Rework tests and benchmark for the new APIs; add BundleSortIntegrationTest

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>